welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: forward reference extends over definition of variable T
			brosse(T(i))
                               ^