welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() 
{
	def brosse(c:Color)
	{
		setCouleurBrosse(c); baisseBrosse(); leveBrosse()
	}

	def colonne()
	{
		for(i <- 0 to 0)
		{
			brosse(T(i))
			avance()
		}
	}

	var T = new Array[Color](getMondeHauteur())

	for(i <- 0 to 5)
	{
		T(i) = getCouleurSol(); 
		avance;
	}

	for(i <- 1 to 5)
	{
		avance(); gauche(); avance(); droite()
		colonne()
	}
}
